# gemelli

./: .gitattributes  .gitignore  .gitmodules  .release-please-manifest.json  CLAUDE.md  Cargo.toml  README.md  THIRD-PARTY-NOTICES  deny.toml  mise.toml  package.json  release-please-config.json
.cargo/: config.toml
.claude/skills/branching-modeled-state-with-match/: SKILL.md
.claude/skills/chaining-result-combinators/: SKILL.md
.claude/skills/early-return-guards/: SKILL.md
.claude/skills/explicit-primitive-conversion/: SKILL.md
.claude/skills/precise-type-modeling/: SKILL.md
.claude/skills/prefix-match-processor/: SKILL.md
.claude/skills/three-word-naming/: SKILL.md
.github/workflows/: bench.yml  ci.yml  license-check.yml  macos.yml  release.yml  windows.yml
.husky/: pre-commit
crates/cli/: CHANGELOG.md  Cargo.toml  app.manifest  build.rs
crates/cli/src/: args.rs  main.rs  run.rs  select.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/examples/: dump_frame.rs
crates/core/src/: capture.rs  frame.rs  lib.rs  pipeline.rs  publish.rs  selector.rs
crates/core/src/transform/: config.rs  crop.rs  flip.rs  mod.rs  rotate.rs  scale.rs
crates/core/tests/: camera_smoke.rs
crates/gui/: CHANGELOG.md  Cargo.toml  app.manifest  build.rs
crates/gui/assets/: icon.icns  third-party-licenses.json
crates/gui/src/: app.rs  config.rs  crop_editor.rs  fonts.rs  fps_meter.rs  licenses.rs  main.rs  menu.rs  preview.rs  sidebar.rs  theme.rs  tray.rs  widgets.rs  worker.rs
crates/publisher/: Cargo.toml  build.rs
crates/publisher/src/: lib.rs
crates/spout/: CHANGELOG.md  Cargo.toml  build.rs
crates/spout/cpp/: spout_bridge.cpp  spout_bridge.h
crates/spout/examples/: bench_spout_cpu.rs
crates/spout/src/: ffi.rs  lib.rs  metrics.rs
crates/syphon/: CHANGELOG.md  Cargo.toml  build.rs
crates/syphon/cpp/: syphon_bridge.h  syphon_bridge.mm
crates/syphon/examples/: bench_syphon_cpu.rs
crates/syphon/src/: ffi.rs  lib.rs  metrics.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: license_entry.rs  main.rs  merge.rs  normalize.rs  render.rs  sort.rs
crates/xtask/src/bundle/: cmd.rs  layout.rs  mod.rs  plist.rs  readme.rs  windows.rs
docs/: tasks.md
docs/superpowers/plans/: 2026-07-07-core-cli-implementation.md  2026-07-08-distribution-artifacts.md  2026-07-08-distribution-prep.md  2026-07-08-gemelli-spout.md  2026-07-08-gui-implementation.md  2026-07-09-capture-throughput.md  2026-07-14-installer-distribution.md
docs/superpowers/specs/: 2026-07-07-webcam-sharedtexture-design.md  2026-07-08-distribution-artifacts-design.md  2026-07-08-distribution-prep-design.md  2026-07-08-gemelli-gui-design.md  2026-07-08-gemelli-spout-design.md  2026-07-08-portrait-ui-design.md  2026-07-09-capture-throughput-design.md  2026-07-09-tray-close-minimize-design.md  2026-07-14-installer-distribution-design.md
licenses/: appendix.json
packaging/windows/: gemelli.iss
scripts/: fetch-fonts.sh  fetch-spout.sh  gen-icon.py  gen-icon.sh
