[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/gui", "crates/syphon", "crates/spout"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/naporin0624/web-cam-sharedtexture"

[workspace.dependencies]
thiserror = "2"
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.5"
eframe = "0.35"
egui = "0.35"
arc-swap = "1.9"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
as_conversions = "deny"
