[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/gui", "crates/syphon", "crates/spout", "crates/xtask"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/naporin0624/web-cam-sharedtexture"

[workspace.dependencies]
thiserror = "2"
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.5"
eframe = "0.35"
egui = "0.35"
arc-swap = "1.9"
vergen-gix = { version = "10.0.1", features = ["build"] }
muda = "0.19.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
as_conversions = "deny"
