[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/gui", "crates/syphon", "crates/xtask"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/naporin0624/web-cam-sharedtexture"

[workspace.dependencies]
thiserror = "2"
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.5"
eframe = "0.35"
egui = "0.35"
arc-swap = "1.9"
vergen-gix = { version = "10.0.1", features = ["build"] }
muda = "0.19.3"
tray-icon = "0.24.1"
png = "0.18.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OBS Virtual Camera advertises only kCVPixelFormatType_32BGRA, which stock
# nokhwa rejects during format enumeration ("Unknown FourCharCode 1111970369").
# The fork's fix/bgra-support branch adds BGRA support.
[patch.crates-io]
nokhwa-bindings-macos = { git = "https://github.com/naporin0624/nokhwa", rev = "a02d544769f715a62de13bc07b1029e189ad419f" }
# The fork's bindings depend on nokhwa-core by path, so patch it too or the
# dependency graph gets two nokhwa-core instances with incompatible types.
nokhwa-core = { git = "https://github.com/naporin0624/nokhwa", rev = "a02d544769f715a62de13bc07b1029e189ad419f" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
as_conversions = "deny"
