[package]
name = "gemelli-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "gemelli"
path = "src/main.rs"

[dependencies]
gemelli-core = { path = "../core" }
clap = { workspace = true }
ctrlc = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
gemelli-syphon = { path = "../syphon" }
