[package]
name = "gemelli-cli"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "gemelli"
path = "src/main.rs"

[dependencies]
gemelli-core = { path = "../core" }
clap = { workspace = true }
ctrlc = { workspace = true }
thiserror = { workspace = true }
# Platform gating lives inside gemelli-syphon itself (crate-wide
# `#![cfg(target_os = "macos")]`), not in a `[target.'cfg(...)'.dependencies]`
# table here: release-please's Rust manifest updater cannot parse cfg()
# target tables and fails to bump this crate's version.
gemelli-syphon = { path = "../syphon" }
