[package]
name = "gemelli-gui"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gemelli-core = { path = "../core" }
eframe = { workspace = true }
egui = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Platform gating lives inside gemelli-syphon itself (crate-wide
# `#![cfg(target_os = "macos")]`), not in a `[target.'cfg(...)'.dependencies]`
# table here: release-please's Rust manifest updater cannot parse cfg()
# target tables and fails to bump this crate's version.
gemelli-syphon = { path = "../syphon" }
# Same non-cfg-gated dependency pattern as gemelli-syphon (see the comment
# above): platform gating lives inside gemelli-spout's crate-wide cfg.
gemelli-spout = { path = "../spout" }
muda = { workspace = true }

[build-dependencies]
vergen-gix = { workspace = true }
