[package]
name = "gemelli-gui"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gemelli-core = { path = "../core" }
eframe = { workspace = true, features = ["persistence"] }
egui = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Platform gating lives inside gemelli-syphon itself (crate-wide
# `#![cfg(target_os = "macos")]`), not in a `[target.'cfg(...)'.dependencies]`
# table here: release-please's Rust manifest updater cannot parse cfg()
# target tables and fails to bump this crate's version.
gemelli-syphon = { path = "../syphon" }
# Same rationale as gemelli-syphon above, but gated to Windows inside
# gemelli-spout itself (`#![cfg(target_os = "windows")]`).
gemelli-spout = { path = "../spout" }
muda = { workspace = true }
tray-icon = { workspace = true }
png = { workspace = true }

[build-dependencies]
vergen-gix = { workspace = true }
