[package]
name = "gemelli-publisher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
# Enables the DEP_GEMELLI_PUBLISHER_RPATH build-script metadata channel this
# crate re-emits (read from linguine's own DEP_LINGUINE_RPATH); see build.rs
# and crates/cli/build.rs / crates/gui/build.rs (the consumers of
# DEP_GEMELLI_PUBLISHER_RPATH).
links = "gemelli_publisher"

[lints]
workspace = true

[dependencies]
gemelli-core = { path = "../core" }
linguine = { workspace = true }
