[package]
name = "gemelli-spout"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
# Matches the gemelli-syphon convention (see crates/syphon/Cargo.toml): the
# `links` key namespaces this crate's native lib so nothing else links it twice.
# Unlike Syphon (a dylib framework needing rpath), Spout2 links statically, so
# no rpath metadata is published for downstream crates to consume.
links = "spout_bridge"

[lints]
workspace = true

[dependencies]
gemelli-core = { path = "../core" }

[build-dependencies]
cc = "1"

[dev-dependencies]
libc = "0.2"
